Update the function

--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -12,5 +12,17 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.2"
-  }
+  },
+  "description": "",
+  "version": "1.0.0",
+  "main": "hardhat.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
