--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -11,7 +11,8 @@
     "hardhat": "^2.13.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.2"
+    "@openzeppelin/contracts": "^4.8.2",
+    "dotenv": "^16.0.3"
   },
   "description": "",
   "version": "1.0.0",
