--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,10 +7,12 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.11.15",
+    "@mui/x-date-pickers": "^6.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "ethers": "^5.6.0",
     "react": "^18.2.0",
